# peppermint

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
app/: main.c
include/: logging.h  particle.h  rng.h  shape_creation.h  utils.h  vector_math.h
include/algorithms/: qsort.h  sorting.h  sorting_helpers.h
include/data_structures/: heap.h
src/: logging.c  rng.c  shape_creation.c  utils.c
src/algorithms/: qsort.c  sorting.c  sorting_helpers.c
src/data_structures/: heap.c
tests/: main_test.c  sorting_tests.cpp  test_wrapper.h
